--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@ header {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	text-align: center;
 }
 
 .logo {
@@ -69,4 +70,32 @@ header {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 18px;
+}
+
+.btn,
+.btn:link,
+.btn:visited{
+	text-transform: uppercase;
+	text-decoration: none;
+	display: inline-block;
+	padding: 15px 40px;
+	border-radius: 100px;
+	font-size: 16px;
+}
+
+.btn-white{
+	color: #777777;
+	background-color: #fff;
+}
+
+.btn:hover{
+	transform: translateY(-3px);
+	box-shadow: 0 5px 20px rgba(0, 0, 0, .2);
+}
+
+/* active button */
+.btn:active{
+	outline: none;
+	transform: translateY(-1px);
+	box-shadow: 0 5px 20px rgba(0, 0, 0, .2);
 }
