--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ header {
 	background-size: cover;
 	background-position: top;
 	position: relative;
-    height: 95vh;
+	height: 95vh;
 	-webkit-clip-path: ellipse(72% 57% at 52% 33%);
 	clip-path: ellipse(72% 57% at 52% 33%);
 }
@@ -52,50 +52,73 @@ header {
 	left: 30px;
 }
 
-.heading-primary{
-    color: #fff;
-    text-transform: uppercase;
-    margin-bottom: 60px;
+.heading-primary {
+	color: #fff;
+	text-transform: uppercase;
+	margin-bottom: 60px;
 }
 
-.heading-primary__main{
-    display: block;
-    font-size: 62px;
-    font-weight: 400;
-    letter-spacing: 15px;
+.heading-primary__main {
+	display: block;
+	font-size: 62px;
+	font-weight: 400;
+	letter-spacing: 15px;
 }
 
-.heading-primary__sub{
-    display: block;
-    font-size: 20px;
-    font-weight: 700;
-    letter-spacing: 18px;
+.heading-primary__sub {
+	display: block;
+	font-size: 20px;
+	font-weight: 700;
+	letter-spacing: 18px;
 }
 
 .btn,
 .btn:link,
-.btn:visited{
+.btn:visited {
 	text-transform: uppercase;
 	text-decoration: none;
 	display: inline-block;
 	padding: 15px 40px;
 	border-radius: 100px;
 	font-size: 16px;
+	position: relative;
 }
 
-.btn-white{
+.btn-white {
 	color: #777777;
 	background-color: #fff;
 }
 
-.btn:hover{
+.btn:hover {
 	transform: translateY(-3px);
-	box-shadow: 0 5px 20px rgba(0, 0, 0, .2);
+	box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
 }
 
 /* active button */
-.btn:active{
+.btn:active {
 	outline: none;
 	transform: translateY(-1px);
-	box-shadow: 0 5px 20px rgba(0, 0, 0, .2);
+	box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+}
+/* animation button */
+.btn::after {
+	content: '';
+	display: inline-block;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	border-radius: 100px;
+	z-index: -1;
+	transition: all .4s;
+}
+
+.btn:hover::after {
+	transform: scaleX(1.4) scaleY(1.6);
+	opacity: 0;
+}
+
+.btn-white::after {
+	background-color: #fff;
 }
