--- a/css/styles.css
+++ b/css/styles.css
@@ -5,20 +5,25 @@
     dark blue: #1c3eff;
 */
 
-* {
+*,
+*::before,
+*::after {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+	box-sizing: inherit;
 }
 
 body {
 	font-family: 'Lato', sans-serif;
 	font-weight: 400;
-	font-size: 16px;
+	font-size: 1.6rem;
 	color: #777777;
 	padding: 30px;
+	box-sizing: border-box;
 }
-
+html {
+	font-size: 62.5%;
+}
 header {
 	background-image: linear-gradient(
 			to right bottom,
@@ -56,9 +61,9 @@ header {
 	color: #fff;
 	text-transform: uppercase;
 	margin-bottom: 60px;
-	
+
 	/* Hiệu ứng animation tồn tại */
-	animation-duration: 2s; 
+	animation-duration: 2s;
 	/* Thời gian animation chạy */
 	animation-iteration-count: 1;
 	/* animation delay */
@@ -67,7 +72,7 @@ header {
 
 .heading-primary__main {
 	display: block;
-	font-size: 62px;
+	font-size: 6.2rem;
 	font-weight: 400;
 	letter-spacing: 15px;
 	animation: moveInLeft 1s ease-out;
@@ -75,7 +80,7 @@ header {
 
 .heading-primary__sub {
 	display: block;
-	font-size: 20px;
+	font-size: 2rem;
 	font-weight: 700;
 	letter-spacing: 18px;
 	animation: moveInRight 1s ease-out;
@@ -89,7 +94,7 @@ header {
 	display: inline-block;
 	padding: 15px 40px;
 	border-radius: 100px;
-	font-size: 16px;
+	font-size: 1.6rem;
 	position: relative;
 }
 
@@ -132,8 +137,8 @@ header {
 	background-color: #fff;
 }
 
-.btn-animated{
-	animation: moveInBottom .5s ease-out .75s;
+.btn-animated {
+	animation: moveInBottom 0.5s ease-out 0.75s;
 	animation-fill-mode: backwards;
 }
 /* Animation header */
@@ -151,7 +156,7 @@ header {
 	}
 }
 
-@keyframes moveInLeft{
+@keyframes moveInLeft {
 	0% {
 		opacity: 0;
 		transform: translateX(-100px);
@@ -165,7 +170,7 @@ header {
 	}
 }
 
-@keyframes moveInRight{
+@keyframes moveInRight {
 	0% {
 		opacity: 0;
 		transform: translateX(100px);
@@ -179,12 +184,12 @@ header {
 	}
 }
 
-@keyframes moveInBottom{
+@keyframes moveInBottom {
 	0% {
 		opacity: 0;
 		transform: translateY(30px);
 	}
-	
+
 	100% {
 		opacity: 1;
 		transform: translateY(0);
